2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/CProject.cs:
	* Parser/TagDatabaseManager.cs:
	* Parser/ProjectInformation.cs: Remove info from parse db when
	  a file is removed from the project. Fixes #398632.

2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Compiler/GNUCompiler.cs: Be more helpful on unparsable
	  compiler/linker failure. Fixes #487964.

2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* CBinding.addin.xml: Make supported file extensions more
	  comprehensive and consistent.

2009-08-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* CBinding.addin.xml: Set appropriate extension point for
	  editor context menu command. Fixes #508838.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/CBinding.PackageDetails.cs: Flush.

2009-07-29  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProjectBinding.cs: Track api changes. Patch by
	  Viktoria Dudka.

2009-07-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Added range check.

2009-06-29  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com> 

	* Compiler/GNUCompiler.cs: Localize output parser.
	  Fixes #501898.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/TagDatabaseManager.cs: Use the new DesktopService
	  instead of PlatformService.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Track api changes.

2009-06-13  Mike Krüger  <mkrueger@novell.com>

	* Gui/CTextEditorExtension.cs: Applied patch "Bug 512617 -
	  [PATCH] Deleting a selected line with Enter, got "Error in
	  text editor extension chain.".

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CLanguageBinding.cs:
	* CppLanguageBinding.cs: Track comment tag API.

2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Track api changes in IExecutionHandler.
